# xlsx2csv.rs

./: .clog.toml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: rust.yml
examples/: test.ods  test.xls  test.xlsm  test.xlsx  with-empy-sheet.xlsx
src/: main.rs
