[package]
name = "xlsx2csv"
version = "0.4.1"
authors = ["Huo Linhe <linhehuo@gmail.com>"]
description = "Excel-like sheets to CSV converter"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/zitsen/xlsx2csv.rs"
repository = "https://github.com/zitsen/xlsx2csv.rs"
edition = "2018"

[package.metadata.release]
pre-release-commit-message = "chore(release): release {{version}}"
post-release-commit-message = "chore(dev): start next development iteration {{version}}"

[dependencies]
#calamine = { version = "0.16.1", features = ["dates"] }
ooxml = "0.2.1"
csv = "1"
pbr = "1"
regex = "1"
structopt = "0.3.17"
