[package]
name = "xlsx2csv"
version = "0.4.5"
authors = ["Huo Linhe <linhehuo@gmail.com>"]
edition = "2018"
homepage = "https://github.com/zitsen/xlsx2csv.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zitsen/xlsx2csv.rs"
description = "Excel-like sheets to CSV converter"

[package.metadata.release]
#post-release-commit-message = "chore(dev): start next development iteration {{version}}"
pre-release-commit-message = "chore(release): release {{version}}"

[dependencies]
# calamine = {version = "0.18", features = ["dates"]}
clap = { version = "3", features = ["derive"] }
csv = "1"
ooxml = "0.2.8"
pbr = "1"
regex = "1"
